feat: [PIDM-2052] Code smells